; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_subr.c_ifclassq_enqueue.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq_subr.c_ifclassq_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifclassq = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ifclassq_enqueue(%struct.ifclassq* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.ifclassq*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.ifclassq* %0, %struct.ifclassq** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load i32, i32* %7, align 4
  switch i32 %10, label %14 [
    i32 128, label %11
  ]

11:                                               ; preds = %4
  %12 = load %struct.ifclassq*, %struct.ifclassq** %5, align 8
  %13 = call i32 @IFCQ_LOCK_SPIN(%struct.ifclassq* %12)
  br label %17

14:                                               ; preds = %4
  %15 = load %struct.ifclassq*, %struct.ifclassq** %5, align 8
  %16 = call i32 @IFCQ_LOCK(%struct.ifclassq* %15)
  br label %17

17:                                               ; preds = %14, %11
  %18 = load %struct.ifclassq*, %struct.ifclassq** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %9, align 4
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @IFCQ_ENQUEUE(%struct.ifclassq* %18, i8* %19, i32 %20, i32 %21, i32* %22)
  %24 = load %struct.ifclassq*, %struct.ifclassq** %5, align 8
  %25 = call i32 @IFCQ_UNLOCK(%struct.ifclassq* %24)
  %26 = load i32, i32* %9, align 4
  ret i32 %26
}

declare dso_local i32 @IFCQ_LOCK_SPIN(%struct.ifclassq*) #1

declare dso_local i32 @IFCQ_LOCK(%struct.ifclassq*) #1

declare dso_local i32 @IFCQ_ENQUEUE(%struct.ifclassq*, i8*, i32, i32, i32*) #1

declare dso_local i32 @IFCQ_UNLOCK(%struct.ifclassq*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
